# pcg-cc-mcp

./: .dockerignore  .env.example  .env.integration.example  .gitignore  ACCESS_CONTROL.md  AGENT-SERVICES-README.md  APN-CORE-DESKTOP-CHECKLIST.md  APN-DEDUPLICATION-PATCH.md  APN-PEER-SETUP.md  APN-QUICKSTART.md  APN-README.md  APN_DATA_SYNC_GUIDE.md  AUTHENTICATION_IMPLEMENTATION_PLAN.md  AUTH_FRONTEND_COMPLETE.md  AUTH_QUICK_START.md  AUTO_SYNC_SETUP.md  BACKUP_QUICKSTART.md  BOOTSTRAP-INFO.txt  BRITISH_VOICE_SETUP.md  CLAUDE.md  CLIENT_README.md  CLOUDFLARE_TUNNEL.md  CODE-OF-CONDUCT.md  COLLABORATION_MODEL_DESIGN.md  CONNECT-NOW.txt  CONNECT-YOUR-DEVICE.md  CONTINUOUS_CONVERSATION_MODE.md  CRYPTO_ROBOT_INTEGRATION.md  Cargo.toml  DASHBOARD-FIX-README.md  DASHBOARD-LAUNCHER-README.md  DATA_IMPORT_GUIDE.md  DEPLOY-WEBSITE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-IMPROVEMENTS.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DISTRIBUTION-READY.md  DOCKER_DATA_PERSISTENCE.md  DOCKER_DEPLOYMENT.md  (+148 more)
apn-app/src-tauri/: Cargo.toml  tauri.conf.json
apn-app/src-tauri/src/: main.rs
crates/alpha-protocol-core/: Cargo.toml
crates/alpha-protocol-core/src/: crypto.rs  economics.rs  identity.rs  identity_storage.rs  lib.rs  mesh.rs  mining.rs  node.rs  relay.rs  resources.rs  reward_distributor.rs  reward_tracker.rs  wire.rs
crates/apn-client/: Cargo.toml
crates/apn-client/src/: lib.rs  types.rs
crates/cinematics/: Cargo.toml
crates/cinematics/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: api.rs  commands.rs  config.rs  main.rs  output.rs  repl.rs  session.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-00a8c1188387f6415d09b74cf444655d8d2d197f96e46da4719def090ab72898.json  query-0267b6919beefb520d3e0e7f1d28e5feb746b1d3a820329c7bf13dbd31d72d5a.json  query-0617d369a0c981603941d0d5becba98140a40f43d5a83093fdf6d2b1675b4cc9.json  query-088055fda2d02862034164fba2d3303ec98d90063556676cf4b4237d83111299.json  query-0ae2af917c0ef655110b5dea14925e7596b41704ed6ee34c04248ce47a77ee3f.json  query-0c1e86b4c1ad8f09ee717f0b8e85b09d7cd467b7c05d3b6dcdbd172447f8f3bc.json  query-13547283373d3bbc0c6c6d252c09d98e11826f4860c950bb5a60bc18a2fc5beb.json  query-13717dbd1d8c5cfb5976fbf273aa76bc6d941e04b8173f1742261ccec06a49f0.json  query-14a48161a49edb13ba4374c5d366fa895b24c9681edfe2b988832fcec9daea5e.json  query-24a0fd2500662d1907b93197779335e5c7b4cbdb10dbc2308ed02f3defbd6e6f.json  query-256f6ea7479536e04fea82946641a3794bd4c1fe67cc12a933f8f95947084e2d.json  query-2e5aa40a97a1ba12aa07b279bfa8f898af500cab1fb4425180e7ff6c8f1bce2b.json  query-2ea14dad477d26793be34ebba89fc3c4f8fd928917f0dead9611eae24a8f729f.json  query-301d9434f71ac9f2ef7ed690c183943cb3475234f7a1f41e079fcd769a3e938b.json  query-332608af8d80f3f27a64d797e114de3547d9340a50c122814e6dbc6db33c7b55.json  query-349ef6c492cc3a2d7c0d65f9419facf0bb82f0d35e33ec6741bf0ea6280c61d8.json  query-34cdd4e460398e36f8e84a512e8425bd01af14a17e9aaf9863030cb4f16cc606.json  query-375aade263a155fe809ab7e4dee6aa0432045eee452d6063c502b2f71ce4eb26.json  query-401b5e402f3d3979da1309ec26267abad62b8d72454d90e1d4c36e682869bdf1.json  query-4119a33f5e13501b7a035255470d0b7ac505ae16d7687f0fd414bd75cdb55783.json  query-413beac162baf275b464ac10d6f961f005d22234290037b394e10608601dd8bb.json  query-425b03d97ceae0bcd7f6492e91c6dbc5c0070edd351f6213eb76f1cc70616587.json  query-43637327105fb57ff945cc47947938d008d14b7e16e1ad035af378a1a28607f0.json  query-440f6334211a9e903044bd5011621a7a23eeee084a743c6f775d4871035b65d8.json  query-47f554fe2f8193ecc5ce8bfcc7f5d4297a52c9ad2aa2676c83b6c64e06230e68.json  query-4efaf5736c447a6b3a0e935bc04431839dc764b13cd62dfac6bffbcbd489b3bf.json  query-4f39f367a606e8c063be14d291638843c0714313a2726f99c38cb7a4713ca793.json  query-50de3c515b8cd4543891b0c84a539f9a18b51ec4f93c3af1eb84c6bf02208cb9.json  query-56f0dd24bc6dadf28c60ccbb4af5266bd8c0be4e2b640b0d274ca1138ddec4dc.json  query-65e108a86e3caf621b681fdffc73df1af97092fdad2d3d9fd29a0f340774d548.json  query-68455a98fb3e9942b9044e98c70f7bd1bc90ec1029980cde40ad86da60385a5b.json  query-694765276c398c281d0ad9576cc7394cbf9fe97716dc0c198c43d9ce42719c1f.json  query-69f1c1d22f19cd53845699722bd59e2fae0a39dba9c86c37976add5d49c2e1f2.json  query-6bfcea1cd86ab2d3575698a581787690a7c76caeb8a0228da5451401e5b7e42b.json  query-6d5f1a6693292d86e8a390f7ac0b367d76efcc9d065614dd8bfd0a4bc43591d5.json  query-7122455edce661d5ee04ebec9a25c1a2cf581e13b9732637e5d072cbf11e2dd9.json  query-71c47a816d1106045f72505e7176b970ab1c0d0ba28a78c00f06143ae6f1e16e.json  query-723ccbbd78697858975c0e0f3da894c6eb4e5b6c839a243245a1e7a7fb2b92df.json  query-730f499c2176055ea36bb7d38e2a0900af33a99a563de9882ce3167122d7824d.json  query-7a187ef0debafba3d5ff1b1c1d459ca521239d3a16b73df7fdf1423b05caccf1.json  (+46 more)
crates/db/bindings/: AccountStatus.ts  AccountType.ts  AgentFlow.ts  AgentFlowEvent.ts  AgentPhase.ts  AgentWallet.ts  AgentWalletTransaction.ts  AptosTxStatus.ts  ArtifactReview.ts  ArtifactRole.ts  BrandProfile.ts  BrandVoice.ts  ContactSource.ts  ContentType.ts  CostEstimate.ts  CreateAgentFlow.ts  CreateArtifactReview.ts  CreateCrmContact.ts  CreateCustomFieldDefinition.ts  CreateEmailAccount.ts  CreateFlowEvent.ts  CreateOnboardingSegment.ts  CreatePeerNode.ts  CreatePeerReward.ts  CreateProjectBoard.ts  CreateProjectOnboarding.ts  CreateSocialAccount.ts  CreateSocialMention.ts  CreateSocialPost.ts  CreateTaskDependency.ts  CreateTimeEntry.ts  CreateTokenUsage.ts  CreateUserRequest.ts  CreateVibeTransaction.ts  CreateVibeWithdrawal.ts  CreateWideResearchSession.ts  CrmContact.ts  CustomFieldDefinition.ts  CustomFieldType.ts  DailyTokenUsage.ts  (+75 more)
crates/db/migrations/: 20250930000000_add_views_and_tags.sql  20250930000001_add_collaboration_fields.sql  20251002090000_create_project_pods_and_assets.sql  20251002123000_create_agent_wallets.sql  20251003173000_add_project_boards.sql  (+47 more)
crates/nora/: Cargo.toml
crates/pythia-client/: Cargo.toml
crates/topiclips/: Cargo.toml
crates/topsi/: Cargo.toml
frontend/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/: Cargo.lock.bak  Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  lib.rs  main.rs
(+1204 files in other folders)
