[package]
name = "vibertas"
version = "0.1.0"
description = "Vibertas - Sovereign OS for the Alpha Protocol Network"
authors = ["OKB Ventures"]
license = "MIT"
repository = "https://github.com/Powerclub-Global/pcg-cc-mcp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vibertas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Alpha Protocol Core (our mesh networking)
alpha-protocol-core = { path = "../crates/alpha-protocol-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# System information
sysinfo = "0.32"

# Time
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"

# Mobile-specific plugins
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
