[package]
name = "apn-client"
version = "0.1.0"
edition = "2021"
description = "Client library for consuming APN Core API (Layer 0). Used by Dashboard (Layer 2) and Pythia (Layer 3) to interact with the network substrate."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2"
