[package]
name = "pcg-cli"
version = "0.1.0"
edition = "2021"
description = "PCG Dashboard CLI - Interactive development session management"
authors = ["PCG Team"]

[[bin]]
name = "pcg"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
futures = "0.3"

# CLI and terminal
clap = { version = "4", features = ["derive", "env"] }
rustyline = { version = "14", features = ["derive"] }
crossterm = "0.28"
colored = "3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Config
toml = "0.8"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.18"

# Internal crates (optional, for direct DB access)
# db = { path = "../db", optional = true }

[features]
default = []
# direct-db = ["db"]

[dev-dependencies]
tempfile = "3"

# CLI needs to print to stdout - override workspace lints
[lints.clippy]
print_stdout = "allow"
print_stderr = "allow"

[lints.rust]
unsafe_code = "deny"
