[package]
name = "db"
version = "0.0.96"
edition = "2024"

[features]
default = []
postgres = []

[dependencies]
utils = { path = "../utils" }
executors = { path = "../executors" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
async-trait = "0.1"
regex = "1.11.1"
glob = "0.3"
url = "2.5"
sentry-tracing = { version = "0.41.0", features = ["backtrace"] }
futures-util = "0.3"
bcrypt = "0.15"
sha2 = "0.10"
hex = "0.4"
